# memory

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/database/: Cargo.toml
crates/database/src/: database.rs
crates/databases/heed/: Cargo.toml
crates/databases/heed/src/: heed.rs  heed_ids.rs
crates/databases/in_memory/: Cargo.toml
crates/databases/in_memory/src/: in_memory.rs
crates/domain/: Cargo.toml
crates/domain/src/: content.rs  domain.rs  embedding.rs  message.rs  thread.rs
crates/synx/: Cargo.toml
crates/synx/src/: executor.rs  synx.rs  utils.rs
crates/synx/src/utils/: completion.rs  content.rs  embedding.rs
src/: api_state.rs  app_state.rs  database.rs  domain.rs  main.rs  memory.rs  message.rs  synx.rs  thread.rs  utils.rs
src/api/: handlers.rs  routes.rs
src/database/: error.rs  heed.rs  in_memory.rs
src/domain/: content.rs  message.rs  thread.rs
src/utils/: completion.rs  content.rs  embedding.rs  similarity.rs
